fixed bottom spacing

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -18,7 +18,7 @@
 
 .contact {
     margin-left: 46%;
-    margin-top: -5%
+    margin-top: -10%
 }
 
 .tag {
